--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# next.js build output
+.next
+/out
+
 # dependencies
 /node_modules
 /.pnp
@@ -13,6 +17,8 @@
 
 # misc
 .DS_Store
+.env
+.env.build
 .env.local
 .env.development.local
 .env.test.local
