--- a/package.json
+++ b/package.json
@@ -4,21 +4,18 @@
   "private": true,
   "homepage": "https://jlmolinyawe.github.io/test-website",
   "dependencies": {
-    "gh-pages": "^2.0.1",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-scripts": "^3.4.0"
+    "gh-pages": "^2.2.0",
+    "next": "^9.3.0",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "dev": "next",
+    "build": "next build",
+    "start": "next start",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
+    "export": "next export",
+    "deploy": "next build && next export && touch out/CNAME && echo \"test.molinyawe.com\" > out/CNAME && gh-pages -d out"
   },
   "browserslist": {
     "production": [
